--- a/MLM_16_Day.ipynb
+++ b/MLM_16_Day.ipynb
@@ -171,6 +171,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.64   0.848  0.15   0.907 -0.693  0.204  0.468  1.426]\n",
+      " [-0.845 -1.123 -0.161  0.531 -0.693 -0.684 -0.365 -0.191]\n",
+      " [ 1.234  1.944 -0.264 -1.288 -0.693 -1.103  0.604 -0.106]\n",
+      " [-0.845 -0.998 -0.161  0.155  0.123 -0.494 -0.921 -1.042]\n",
+      " [-1.142  0.504 -1.505  0.907  0.766  1.41   5.485 -0.02 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lesson 6\n",
+    "# Standardize data (0 mean, 1 stdev)\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from pandas import read_csv\n",
+    "import numpy as np\n",
+    "url = 'https://goo.gl/bDdBiA'\n",
+    "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
+    "dataframe = read_csv(url, names = names)\n",
+    "array = dataframe.values\n",
+    "# separate array into input and output components\n",
+    "X = array[:, 0:8]\n",
+    "Y = array[:, 8]\n",
+    "scaler = StandardScaler().fit(X)\n",
+    "rescaled_X = scaler.transform(X)\n",
+    "# Summarize transformed data\n",
+    "np.set_printoptions(precision = 3)\n",
+    "print(rescaled_X[0:5, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
